[tool.poetry]
name = "pg-signal"
version = "1.0.0"
description = ""
authors = ["Dennis Torres <djtorres@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
mypy = "1.9.0"
pandas = "2.2.1"
pandas-stubs = "2.2.1.240316"
ruff = "0.2.2"
sox = "1.5.0"
spear-ai-ruff-config = "3.0.0"
sqlfluff = "3.0.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
